samples/_failures_safe/1761468034_32a82a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4a118e3.c: In function ‘tokenize_operator’:
./samples/SAFE/__tmp_a4a118e3.c:153:9: error: expected declaration or statement at end of input
  153 |         state->column++;
      |         ^~~~~
./samples/SAFE/__tmp_a4a118e3.c:153:9: error: expected declaration or statement at end of input
